small optimisation around filtering outbound services by tripid